--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "dev": "bun --watch src/index.ts"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/node": "^22.10.2"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@discordjs/collection": "^2.1.1",
+    "dedent": "^1.5.3",
     "discord.js-selfbot-v13": "^3.4.6"
   }
 }
