Add note for honeypot tokens

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@
 # To get the auth-token simply open a new private browser window, log into the honeypot discord account
 # Press F12 and go to the 'Network' tab, then do anything that triggers a request (e.g. open a channel, send a message, etc.)
 # After that, find a request that has 'Authorization' in the headers, and copy the value of the header
+#
+# IMPORTANT NOTE: Do NOT use a regular browser window, because if you log out of the account, the auth-token will be invalid.
+# Therefore, after you've copied the auth-token in the private browser window, close the window (without logging out) and open a new one.
 HONEYPOT_TOKEN=
 
 # The mode of the honeypot (DM_NOTIFY or WEBHOOK)
